[project]
name = "langchain-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dashscope>=1.23.5",
    "firecrawl-py>=2.9.0",
    "ipykernel>=6.29.5",
    "jinja2>=3.1.6",
    "langchain-community>=0.3.26",
    "langchain-tavily>=0.2.3",
    "langchain[deepseek,openai]>=0.3.26",
    "langgraph>=0.4.8",
    "langgraph-supervisor>=0.0.27",
    "notebook>=7.4.3",
    "pypdf>=5.6.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "socksio>=1.0.0",
]
